Restructure the project. Add support for all RSS feeds.